# X2E-Reference-Sensor-FW

./: .gitmodules  README.md  workspace.code-workspace
GPS_Tracker/: .project  CMakeLists.txt  README.md  sdkconfig.defaults
GPS_Tracker/components/BQ27XXX/: CMakeLists.txt  bq27220.c
GPS_Tracker/components/accel/: .cproject  .project  CMakeLists.txt  README.md  lis2de12.c  lis2de12_reg.c
GPS_Tracker/components/ublox7c/: CMakeLists.txt  GPS_Distance.c  nmea_parser.c  ublox7.c
GPS_Tracker/components/ubxlib/: .cproject  .project
GPS_Tracker/main/: CMakeLists.txt  Kconfig.projbuild
GPS_Tracker/main/mx_target/: mx_target.h
GPS_Tracker/main/src/: GPS_Distance.c  GPS_Distance.h  app_data.c  app_data.h  app_main.c  app_op.c  app_op.h  led.c  led.h  sensors.c  sensors.h  sleep.c  sleep.h
class_c_control/: .cproject  .gitignore  CMakeLists.txt  gen_dfu_package.sh  partitions.csv  sdkconfig.defaults
class_c_control/components/i2c_devices/: CMakeLists.txt  barometric_pressure.h  battery.c  battery.h
class_c_control/main/: Kconfig.projbuild
class_c_control/main/src/: app_data.c  app_main.c  app_op.c  ble_dfu.h  button.h  controls.c  led.c  sensor.h  sleep.c  sleep.h
common/: app_utils.h  crc32.c  crc32.h  debug.c  debug.h  define_type.h  jsmn.c  matchx_payload.h  mutex_helper.h  packer.c  packer.h  sha256.c  sha256.h  task_priority.h
demo_controls/: .project  CMakeLists.txt  README.md  gen_dfu_package.sh
demo_controls/main/: Kconfig.projbuild
demo_controls/main/src/: app_op.c  cmd_op.h  controls.h  sensor.c
environmental_sensor/: CMakeLists.txt  README.md  gen_dfu_package.sh  sdkconfig.defaults
environmental_sensor/components/i2c_devices/: air_quality.c
environmental_sensor/main/: CMakeLists.txt
environmental_sensor/main/src/: app_data.h  app_op.c  sensor.c  sensor.h
example_device/: .project  CMakeLists.txt  README.md  gen_dfu_package.sh  sdkconfig.defaults
example_device/components/i2c_devices/: accelerometer.h  air_quality.c
example_device/main/: CMakeLists.txt  Kconfig.projbuild
example_device/main/mx_target/nexus/: mx_target.c
example_device/main/mx_target/x2e_ref/: mx_target.c
example_device/main/src/: app_data.c  app_main.c  app_op.c  app_op.h  cmd_op.c  led.c  led.h  sensor.c  sleep.c
example_device/main/src/i2c_sensors/: battery.c  battery.h  lis2de12.c  lis2de12.h
ntag_validator/: CMakeLists.txt  README.md  gen_dfu_package.sh  sdkconfig.defaults
ntag_validator/components/NxpNfcRdLib/: CMakeLists.txt
ntag_validator/components/NxpNfcRdLib/comps/phKeyStore/src/Sw/: phKeyStore_Sw.c
ntag_validator/components/NxpNfcRdLib/comps/phNfcLib/src/: phNfcLib.c
ntag_validator/components/NxpNfcRdLib/comps/phacDiscLoop/src/Sw/: phacDiscLoop_Sw.c  phacDiscLoop_Sw_Int.c
ntag_validator/components/NxpNfcRdLib/comps/phalMfNtag42XDna/src/Sw/: phalMfNtag42XDna_Sw.c
ntag_validator/components/NxpNfcRdLib/platform/DAL/: BoardSelection.h  NfcCompon_debug.c
ntag_validator/components/NxpNfcRdLib/platform/board/: Board_X2E.h  phDriver_X2E.c
ntag_validator/components/NxpNfcRdLib/platform/phOsal/src/Freertos/: phOsal_Freertos.c
ntag_validator/components/NxpNfcRdLib/types/: ph_NxpBuild_Platform.h
ntag_validator/components/i2c_devices/: air_quality.h  barometric_pressure.c
ntag_validator/components/i2c_port_1/: CMakeLists.txt  i2c_port_1.c  i2c_port_1.h
ntag_validator/components/simple_display/: CMakeLists.txt  display.c  display.h  display_hal.h  font_12x16.c  font_12x16.h  font_6x8.h  font_8x12.c  hal_ssd1315.c
ntag_validator/main/: Kconfig.projbuild
ntag_validator/main/src/: app_main.c  app_op.c  button.c  button.h  led.h  ntag.c  ntag.h  sensor.c  sensor.h
scripts/: gen_dfu_package.py
testing/test_ble_dfu/: CMakeLists.txt  README.md  gen_dfu_package.sh  sdkconfig.defaults
testing/test_gps/: CMakeLists.txt  README.md
testing/test_gps/main/: Kconfig.projbuild
testing/test_hello/: CMakeLists.txt
testing/test_i2c_devices/: CMakeLists.txt  README.md
testing/test_i2c_devices/components/i2c_devices/: CMakeLists.txt  accelerometer.c
testing/test_i2c_devices/components/i2c_devices/zmod4410/: zmod4xxx_hal.h
testing/test_i2c_devices/main/: CMakeLists.txt
testing/test_i2c_devices/main/src/: test.c
testing/test_lora/: CMakeLists.txt  README.md  sdkconfig.defaults
testing/test_ntag/: CMakeLists.txt  gen_dfu_package.sh  sdkconfig.defaults
testing/test_ntag/components/simple_display/: CMakeLists.txt  display.c  display.h  display_hal.h  font_6x8.c  font_8x12.h  hal_ssd1315.c
testing/test_ntag/components/simple_display/LCD-fonts/: 6x8_vertikal_LSB_1.h
testing/test_ntag/main/: CMakeLists.txt
testing/test_ntag/main/src/: logo_matchx.h  ntag.c  ntag.h  test.c  test.h  test_display.c  test_display.h  test_nfc.c  test_nfc.h
testing/test_spi/: CMakeLists.txt  README.md
testing/test_spi/main/: CMakeLists.txt  Kconfig.projbuild
testing/test_spi/main/mx_target/: mx_target.h
testing/test_spi/main/mx_target/x2e_ref/: mx_target.c
testing/test_spi/main/src/: app_main.c  app_utils.c  check_nfc.c  check_nfc.h  check_sx1261.c  check_sx1261.h  check_sx1280.c  check_sx1280.h  debug.c  debug.h  task_priority.h  test.c  test.h
testing/test_spi/main/src/st25r3911/: nfc-gpio.h  rfal_utils.h  st25r3911.h  st25r3911_com.c  st25r3911_com.h
(+63 files in other folders)
